# Slyf-board

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT_IMPLEMENTATION.md  FIXES_IMPLEMENTATION.md  PRD.md  SECRETS.md  SECURITY_AUDIT_REPORT.md  SIGNAL_INTEGRATION_SUCCESS.md  SIGNAL_SETUP_GUIDE.md  TOTP_VALIDATION_COMPLETE.md  deploy_bypass.sh  deploy_fixes.sh  google-cloud-sdk  test_gif.py  update_urls.sh
.claude/hooks/: after-edit.sh  before-edit.sh
.claude/ralph/: README.md  STATUS_SUMMARY.md  agents.md  automated-captcha-solver.py  prd.json  progress.txt  prompt.md  signal-captcha-helper.sh  signal-registration-monitor.sh  stop-hook.sh
.claude/skills/: debug-signal.md  deploy-changes.md  test-totp.md
.github/workflows/: security-scan.yml
backend/: .env.example  .gitignore  audit-report.json  migrate_to_s3.py  pyproject.toml  temp_requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_posts.py
backend/app/: config.py  d1_client.py  database.py  main.py  media.py  models.py  schemas.py  security.py  signal_listener.py  sse.py  totp.py  validators.py
backend/app/routers/: admin.py  posts.py
backend/tests/: conftest.py  test_config.py  test_media.py  test_routers.py  test_signal_listener.py  test_sse.py  test_totp.py
deploy/: board.service  setup.sh  signal-cli.service
docs/: BYPASS_TOTP.md  README.md
docs/ADR/: changes06.md  walkthough06.md
frontend/: .env.production  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  (+4 more)
nginx/: board.conf  token-generator.conf
token-generator/: index.html  netlify.toml  package-lock.json  package.json
(+10 files in other folders)
